Minor corrections to Google Colab notebook

--- a/code/R01_PrveKroky.ipynb
+++ b/code/R01_PrveKroky.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "R01_PrveKroky.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP2YbSLoW2gZtyp8+xkNJ9n",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyM0E5rhcAiA3r7w/IQ9X9vk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +28,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BD-Bth4NoD1g",
-        "colab_type": "text"
+        "id": "BD-Bth4NoD1g"
       },
       "source": [
         "# Ako chutí R\n",
@@ -36,7 +36,7 @@
         "Kým začnete písať R, urobíme niečo jednoduché, aby ste mali predstavu, kade povedú naše ďalšie kroky. \n",
         "\n",
         "## R notebook\n",
-        "Nacházame sa v Google Colab R notebooku. Notebook pozostáva \n",
+        "Nachádzame sa v Google Colab R notebooku. Notebook pozostáva \n",
         "\n",
         "* z blokov textu, ako je tento, s Markdown formátovaním\n",
         "\n",
@@ -55,17 +55,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "OJPRoOggpvIc",
-        "colab_type": "code",
+        "outputId": "e4e81665-19e1-4925-9695-b586483c7b9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 437
-        },
-        "outputId": "45abf4aa-0a52-4e04-9d41-cb3cd2135930"
+        }
       },
       "source": [
         "plot(cars)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -88,8 +87,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "eGZhr_g0qCPd",
-        "colab_type": "text"
+        "id": "eGZhr_g0qCPd"
       },
       "source": [
         "## Ukážkové dátové súbory v R\n",
@@ -108,18 +106,28 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "dbthGNykTgDq"
+      },
+      "source": [
+        "help(cars)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "tLgdvoDip70N",
-        "colab_type": "code",
+        "outputId": "c64f8a51-975b-4d58-a145-ace02cb70a93",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        },
-        "outputId": "478839c5-49d2-484e-c3cb-892f6dd074e1"
+        }
       },
       "source": [
         "head(cars)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -160,10 +168,59 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kdo6hcayUJMp",
+        "outputId": "53ffd017-aa49-4d7e-ca12-7fb09274364d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
+      },
+      "source": [
+        "nrow(cars)\n",
+        "ncol(cars)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[1] 50"
+            ],
+            "text/latex": "50",
+            "text/markdown": "50",
+            "text/html": [
+              "50"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "[1] 2"
+            ],
+            "text/latex": "2",
+            "text/markdown": "2",
+            "text/html": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2MYJRBCkq2te",
-        "colab_type": "text"
+        "id": "2MYJRBCkq2te"
       },
       "source": [
         "`head` preto, lebo nám stačí hlavička a niekoľko prvých riadkov. "
@@ -172,8 +229,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "51kTULWTrAkk",
-        "colab_type": "text"
+        "id": "51kTULWTrAkk"
       },
       "source": [
         "## R data frame\n",
@@ -190,8 +246,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RuaW526ErUIV",
-        "colab_type": "text"
+        "id": "RuaW526ErUIV"
       },
       "source": [
         "## Aká to je závislosť?\n",
@@ -203,17 +258,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "kLawuGXTrawO",
-        "colab_type": "code",
+        "outputId": "43557208-ad2e-4098-d02b-a3aae6aa7d67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 437
-        },
-        "outputId": "05854e1f-5b40-454c-b2de-5db066fbd5c3"
+        }
       },
       "source": [
         "plot(cars)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -236,8 +290,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dunfbVNBri91",
-        "colab_type": "text"
+        "id": "dunfbVNBri91"
       },
       "source": [
         "__Úloha:__: Ako uložíme obrázok do súboru? Spýtajte sa Googlu.\n",
@@ -251,19 +304,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "KuebEd_lrzcn",
-        "colab_type": "code",
+        "outputId": "a30cb5ba-9421-4a57-e15f-8aacf451085f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 437
-        },
-        "outputId": "b8abc011-cad6-4a5b-eab0-fca76e2c247d"
+        }
       },
       "source": [
         "plot(cars, xlab = \"Speed [mph]\", ylab = \"Stopping distance [ft]\", las = 1)\n",
         "lines(lowess(cars$speed, cars$dist, f = 2/3, iter = 3), col = \"red\")\n",
         "title(main=\"Stopping distance vs. initial speed\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -286,8 +338,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "53_c4PH8sL3l",
-        "colab_type": "text"
+        "id": "53_c4PH8sL3l"
       },
       "source": [
         "__Úloha__: Kto netuší čo je *lowess*, čo spraví?\n",
@@ -301,19 +352,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "DEJlV37esPGt",
-        "colab_type": "code",
+        "outputId": "855331bd-d8ca-42d4-84c3-7bd2b5e7c276",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 437
-        },
-        "outputId": "e92530ea-9745-40dd-cb47-5689008fdbba"
+        }
       },
       "source": [
         "plot(cars, xlab = \"Speed [mph]\", ylab = \"Stopping distance [ft]\", las = 1, log = \"xy\")\n",
         "lines(lowess(cars$speed, cars$dist, f = 2/3, iter = 3), col = \"red\")\n",
         "title(main=\"Stopping distance vs. initial speed, log-log scale\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -336,30 +386,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "S4hN8Zw3sbo9",
-        "colab_type": "text"
+        "id": "S4hN8Zw3sbo9"
       },
       "source": [
-        "__Úloha__: Funguje slovenská diakritika? Skúste poslovenečiť popisy osí.\n"
+        "__Úloha__: Funguje slovenská diakritika? Skúste poslovenčiť popisy osí.\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "JhzIVsDTsYX0",
-        "colab_type": "code",
+        "outputId": "e2f2116c-e7ea-49d9-e8e3-4bbdc9003a29",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 437
-        },
-        "outputId": "4776444d-b779-4a4d-ad35-8f4a7cdbde14"
+        }
       },
       "source": [
         "plot(cars, xlab = \"Počiatočná rýchlosť [míle / hod]\", ylab = \"Brzdná dráha [stopy]\", las = 1, log = \"xy\")\n",
         "lines(lowess(cars$speed, cars$dist, f = 2/3, iter = 3), col = \"red\")\n",
         "title(main=\"Brzdná dráha v závislosti od počiatočnej rýchlosti, log-log škála\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -382,8 +430,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pph67rvSsqsS",
-        "colab_type": "text"
+        "id": "pph67rvSsqsS"
       },
       "source": [
         "Naša závislosť vyzerá ako priamka, tak skúsme dáta preložiť priamkou. __POZOR__ začína štatistika!"
@@ -393,19 +440,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "m0nmKALPsuFO",
-        "colab_type": "code",
+        "outputId": "b73bbf83-d8a4-4005-80e7-c0c48523d358",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "a5bb5605-da07-428d-9f1e-357848ebf784"
+        }
       },
       "source": [
         "fmL <- lm(log(dist) ~ log(speed), data = cars)\n",
         "summary(fmL)\n",
         "plot(fmL)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -504,8 +550,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6fVyG7eWs6eF",
-        "colab_type": "text"
+        "id": "6fVyG7eWs6eF"
       },
       "source": [
         "Máme tu kopu výstupov. \n",
